@@ -888,6 +888,7 @@ maintainer)
 <li>Harold Grovesteen
 <li>Glen Herrmannsfeldt
 <li>Brandon Hill
+<li>Robert Hodge
 <li>Gabor Hoffer
 <li>Dan Horak
 <li>Soren Jorvang
